[project]
name = "projeto-etl-backup"
version = "0.1.0"
description = ""
authors = [
    {name = "Milton Savazzi",email = "msavazzi@hotmail.com"}
]
readme = "README.md"
requires-python = "3.14.2"
dependencies = [
    "boto3 (>=1.42.77,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
